// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate nested object types should generate type for nested object 1`] = `
"export declare type myCreateFormInputValues = {
    firstName?: string;
    isExplorer?: boolean;
    bio?: {
        favoriteAnimal?: {
            animalMeta?: {
                family?: {
                    genus?: string;
                };
                earliestRecord?: number;
            };
        };
    };
};"
`;

exports[`should generate nested object types should generate type for non nested object 1`] = `
"export declare type myCreateFormInputValues = {
    firstName?: string;
    isExplorer?: boolean;
    tags?: string[];
};"
`;

exports[`should generate types accordingly for array fields should generate array for input type 1`] = `
"export declare type myCreateFormInputValues = {
    firstName?: string;
    isExplorer?: boolean;
    tags?: string[];
};"
`;

exports[`should generate types accordingly for array fields should remove array type for the validation type 1`] = `
"export declare type myCreateFormValidationValues = {
    firstName?: ValidationFunction<string>;
    isExplorer?: ValidationFunction<boolean>;
    tags?: ValidationFunction<string>;
};"
`;
